--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
             <input id="players" type="text" name="players" />
             <div class="field--hint">Veuillez mettre un séparateur entre le nom des différents joueurs (<code>,</code> <code>;</code> <code>.</code>)</div>
         </div>
+        <div class="field-checkbox">
+            <input type="checkbox" id="investigation">
+            <label for="investigation">Investigation</label>
+        </div>
+        <div class="field-checkbox">
+            <input type="checkbox" id="extraction">
+            <label for="extraction">Extraction</label>
+        </div>
+        <div class="field-checkbox">
+            <input type="checkbox" id="annihilation">
+            <label for="annihilation">Annihilation</label>
+        </div>
         <button type="submit">Lancer la partie</button>
     </form>
 
